# WIZnet-PICO-PHY_Control-C

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/low_power/: CMakeLists.txt  low_power.c
libraries/: CMakeLists.txt
port/: CMakeLists.txt
port/ioLibrary_Driver/inc/: w5x00_spi.h
port/ioLibrary_Driver/src/: w5x00_spi.c
